--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,23 @@
 # Server Configuration
 server.port=8080
 
-# MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/charite
-spring.data.mongodb.auto-index-creation=true
-spring.data.mongodb.database=charite
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:charite
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # Logging Configuration
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
-logging.level.org.springframework.data.mongodb.core.MongoDbUtils=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.com.charite=DEBUG
 logging.level.org.springframework=INFO
 logging.level.org.thymeleaf=DEBUG
